Создал новую модель, применил миграции, добавил новую вкладку посты, сделал кнопку для создания поста, отображаются посты только с пометкой "опубликовано", перевёл всё с FBV на CBV, Slug при создании и редактировании работает, счетчик просмотров работает, при редактировании переносит в саму статью.

--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -4,7 +4,7 @@
         <h1 class="display-4">Бобр</h1>
         <p class="lead">Бобр - это тест зоомагазин для платформы SkyPro!</p>
     </div>
-    {% for object in objects_list %}
+    {% for object in product_list %}
         <div class="container">
             <div class="row text-center">
                 <div class="col-12">
@@ -19,7 +19,6 @@
                             </ul>
                             <a href="{% url 'catalog:product_details' object.pk %}"
                                class="btn btn-lg btn-block btn-outline-primary">Подробнее</a>
-                            </form>
                         </div>
                     </div>
                 </div>
