--- a/catalog/templates/catalog/products.html
+++ b/catalog/templates/catalog/products.html
@@ -2,7 +2,7 @@
 {% load catalog_tags %}
 {% block content %}
     <div class="accordion" id="accordionPanelsStayOpenExample">
-        {% for object in objects_list %}
+        {% for object in product_list %}
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
