--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -4,9 +4,9 @@
     <div class="col-12">
         <div class="card">
             {% if object %}
-                <div class="card-header"><h1>Редактировать пост</h1></div>
+                <div class="card-header"><h1>Редактировать продукт</h1></div>
             {% else %}
-                <div class="card-header"><h1>Создать пост</h1></div>
+                <div class="card-header"><h1>Создать продукт</h1></div>
             {% endif %}
             <div class="card-body">
                 <form method="post">
@@ -23,5 +23,3 @@
         </div>
     </div>
 {% endblock %}
-
-
