--- a/catalog/templates/catalog/version_form.html
+++ b/catalog/templates/catalog/version_form.html
@@ -1,12 +1,12 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-    <div class="col-12">
+        <div class="col-12">
         <div class="card">
             {% if object %}
-                <div class="card-header"><h1>Редактировать пост</h1></div>
+                <div class="card-header"><h1>Редактировать версию</h1></div>
             {% else %}
-                <div class="card-header"><h1>Создать пост</h1></div>
+                <div class="card-header"><h1>Создать версию</h1></div>
             {% endif %}
             <div class="card-body">
                 <form method="post">
@@ -23,5 +23,3 @@
         </div>
     </div>
 {% endblock %}
-
-
