--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -14,6 +14,7 @@
                 <a href="{% url 'catalog:version_list' object.pk %}" class="btn btn-primary">Версии продукта</a>
                 <a href="{% url 'catalog:version_create' object.pk %}" class="btn btn-success">Создать версию
                     продукта</a>
+                <a href="{% url 'catalog:product_update' object.pk %}" class="btn btn-info">Редактировать продукт</a>
             </div>
         </div>
     </div>
