--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -1,15 +1,15 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-    <div class="col-12">
-        <div class="card">
-            {% if object %}
-                <div class="card-header"><h1>Редактировать продукт</h1></div>
-            {% else %}
-                <div class="card-header"><h1>Создать продукт</h1></div>
-            {% endif %}
-            <div class="card-body">
-                <form method="post">
+    <form method="post">
+        <div class="col-12">
+            <div class="card">
+                {% if object %}
+                    <div class="card-header"><h1>Редактировать продукт</h1></div>
+                {% else %}
+                    <div class="card-header"><h1>Создать продукт</h1></div>
+                {% endif %}
+                <div class="card-body">
                     {% csrf_token %}
                     {{ form.as_p }}
                     {% if object %}
@@ -17,9 +17,23 @@
                     {% else %}
                         <button type="submit" class="btn btn-success">Создать</button>
                     {% endif %}
-                </form>
+
+                </div>
+                <div class="card-footer"></div>
             </div>
-            <div class="card-footer"></div>
+            <div class="card">
+                <div class="card-header"><h1>Версии продукта</h1></div>
+                <div class="card-body">
+                    {{ formset.management_form }}
+                    {% for form in formset.forms %}
+                        {{ form.as_p }}
+                        {% if not forloop.last %}
+                            <hr>
+                        {% endif %}
+                    {% endfor %}
+                </div>
+                <div class="card-footer"></div>
+            </div>
         </div>
-    </div>
+    </form>
 {% endblock %}
