Создал новое приложение users. Создал модель. Реализовал регистрацию и верификацию, на почту отправляется секретный код и в модель User зашивается код, после логина нужно пройти верификацию, иначе нельзя будет тыкать кнопки(создание продуктов и постов), логин, аутлогин, сброс пароля работают корректно, пароль прилетает на почту тоже. На странице отображаются только те продукты и посты, которые создал пользователь(перед этим прошел верификацию).

--- a/catalog/templates/catalog/includes/inc_catalog_menu.html
+++ b/catalog/templates/catalog/includes/inc_catalog_menu.html
@@ -4,5 +4,18 @@
         <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:home' %}">Каталог</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:contacts' %}">Контакты</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'catalog:list_blogpost' %}">Посты</a>
+        {% if user.is_authenticated %}
+            <form action="{% url 'users:user_logout' %}" method="post" class="d-inline">
+                {% csrf_token %}
+                <button class="p-2 btn btn-outline-success" type="submit">Выйти</button>
+            </form>
+            <a class="p-2 btn btn-outline-danger" href="{% url 'users:reset_password' %}">Сбросить пароль</a>
+            {% if not user.is_verify %}
+                <a class="p-2 btn btn-outline-danger" href="{% url 'users:user_verify' user.pk %}">Верификация</a>
+            {% endif %}
+        {% else %}
+            <a class="p-2 btn btn-outline-warning" href="{% url 'users:user_create' %}">Регистрация</a>
+            <a class="p-2 btn btn-outline-success" href="{% url 'users:user_login' %}">Войти</a>
+        {% endif %}
     </nav>
 </div>
