--- a/catalog/templates/catalog/product_detail.html
+++ b/catalog/templates/catalog/product_detail.html
@@ -7,7 +7,9 @@
             <div class="card-header"><h5>{{ object.name }}</h5></div>
             <div class="card-body">
                 Категория - {{ object.category }}<br>
-                Дата создания - {{ object.create_at }}
+                Дата создания - {{ object.create_at }}<br>
+                Автор - {{ object.user }}<br>
+
             </div>
             <div class="card-footer">
                 <img src='{% media_path_tag object %}'>
