добавил шаблон и кнопки для категорий, в категориях выводятся только те продукты какую категорию мы берем, продукты подтягиваются из кеша, все "секретные" данные спрятал в переменные окружения, всё работает.

--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -8,6 +8,9 @@
         {% if  user.is_verify or user.is_superuser %}
             <a href="{% url 'catalog:product_create' %}" class="btn btn-primary mb-5">Создать продукт</a>
         {% endif %}
+        {% for category in categories %}
+            <a href="{% url 'catalog:category_detail' category.pk %}" class="btn btn-success mb-5">{{ category }}</a>
+        {% endfor %}
     </div>
     {% for object in product_list %}
         {% if object.user == user or user.is_superuser %}
